--- a/index.ipynb
+++ b/index.ipynb
@@ -42,18 +42,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
    "source": [
     "number_50 = 50\n",
     "less_than_50 = None\n",
     "if number_50 > 100:\n",
+    "    less_than_50 = 100\n",
     "    # if number_50 is greater than 100, assign the `less_than_50` variable to the number 100\n",
     "elif number_50 < 50:\n",
+    "    less_than_50 = 50\n",
     "    # if number_50 is greater than 50, assign the `less_than_50` variable to the number 50\n",
     "else:\n",
-    "    # else assign the `less_than_50` variable to 49"
+    "    less_than_50 = 49\n",
+    "\n",
+    "print(less_than_50)"
    ]
   },
   {
@@ -65,12 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is so hot out!\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
+    "if temperature > 80:\n",
+    "    is_it_hot = \"It is so hot out!\"\n",
+    "elif temperature < 80:\n",
+    "    is_it_hot = \"This is nothing! Bring on the heat.\"\n",
+    "\n",
+    "print(is_it_hot)\n",
     "# conditionals go here"
    ]
   },
@@ -84,13 +110,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wednesday\n"
+     ]
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "# conditionals go here"
+    "if today_is == 1:\n",
+    "    day_of_the_week = \"Sunday\"\n",
+    "elif today_is == 2:\n",
+    "    day_of_the_week = \"Monday\"\n",
+    "elif today_is == 3:\n",
+    "    day_of_the_week = \"Tuesday\"\n",
+    "elif today_is == 4:\n",
+    "    day_of_the_week = \"Wednesday\"\n",
+    "elif today_is == 5:\n",
+    "    day_of_the_week = \"Thursday\"\n",
+    "elif today_is == 6:\n",
+    "    day_of_the_week = \"Friday\"\n",
+    "elif today_is == 7:\n",
+    "    day_of_the_week = \"Saturday\"\n",
+    "    \n",
+    "print(day_of_the_week)"
    ]
   },
   {
@@ -102,14 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "# conditionals go here"
+    "if string.endswith(sub_string):\n",
+    "    ends_with = True\n",
+    "else:\n",
+    "    ends_with = False\n",
+    "\n",
+    "print(ends_with)"
    ]
   },
   {
@@ -129,9 +191,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -143,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
